--- a/src/components/SearchResults/style.css
+++ b/src/components/SearchResults/style.css
@@ -1,102 +1,7 @@
 body {
-    font-family: "Helvetica", sans-serif;
-  display: flex;
-  justify-content: center;
-  padding: 0;
-  color: #020202;
+background-color: rgb(238, 243, 172);
 }
 
-#employee {
-  border-collapse: collapse;
-  border: 3px solid rgb(237, 247, 195);
-}
-
-#employee td,
-#employee th {
-  border: 1px rgb(237, 247, 195);
-  padding: 12px;
-}
-
-#employee tr:hover {
-  background-color: rgb(237, 247, 195);
-}
-
-#employee th {
-  padding: 10px;
-  text-align: center;
-  background-color: #0e8312;
-  color: white;
-}
-
-.operation {
-  text-align: center;
-}
-
-.deleteBtn {
-  border: none;
-  outline: none;
-  font-size: 11px;
-  font-family: "Helvetica", sans-serif;
-  color: #f44336;
-  padding: 3px 10px;
-  border-radius: 8px;
-  cursor: pointer;
-  border: 1px solid #f44336;
-  background-color: transparent;
-}
-
-.button:active {
-  border: 1px solid blue;
-}
-
-
-body {
-  font-family: "Helvetica", sans-serif;
-  display: flex;
-  justify-content: center;
-  padding: 0;
-  color: #4d4d4d;
-}
-
-#employee {
-  border-collapse: collapse;
-  border: 3px solid #ddd;
-}
-
-#employee td,
-#employee th {
-  border: 1px solid #ddd;
-  padding: 12px;
-}
-
-#employee tr:hover {
-  background-color: #ddd;
-}
-
-#employee th {
-  padding: 10px;
-  text-align: center;
-  background-color: #4caf50;
-  color: white;
-}
-
-.operation {
-  text-align: center;
-}
-
-.deleteBtn {
-  border: none;
-  outline: none;
-  font-size: 11px;
-  font-family: "Helvetica", sans-serif;
-  color: #f44336;
-  padding: 3px 10px;
-  border-radius: 8px;
-  cursor: pointer;
-  border: 1px solid #056491;
-  background-color: transparent;
-}
-
-.button:active {
-  border: 1px solid rgb(51, 204, 4);
+.searchBtn {
+    color: rgb(5, 5, 5);
 }
